--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@fontsource/inter": "^4.5.15",
     "@fontsource/roboto-mono": "^4.5.10",
     "@mui/material": "^5.12.1",
+    "@safe-global/api-kit": "^1.1.0",
+    "@safe-global/protocol-kit": "^1.0.1",
     "@safe-global/relay-kit": "^1.0.0",
+    "@safe-global/safe-core-sdk-types": "^2.0.0",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.3",
     "@types/node": "^18.15.11",
