--- a/package.json
+++ b/package.json
@@ -18,61 +18,61 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "@babel/runtime": "^7.21.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@babel/runtime": "^7.22.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^4.5.15",
     "@fontsource/roboto-mono": "^4.5.10",
-    "@mui/material": "^5.12.1",
+    "@mui/material": "^5.13.4",
     "@safe-global/api-kit": "^1.1.0",
     "@safe-global/protocol-kit": "^1.0.1",
     "@safe-global/relay-kit": "^1.0.0",
     "@safe-global/safe-core-sdk-types": "^2.0.0",
-    "@tanstack/react-query": "^4.29.3",
-    "@tanstack/react-query-devtools": "^4.29.3",
+    "@solana/web3.js": "^1.77.3",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@types/node": "^18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "@walletconnect/client": "^1.8.0",
-    "@walletconnect/sign-client": "^2.7.0",
-    "@web3auth/base": "^5.1.0",
-    "@web3auth/ethereum-provider": "^5.1.1",
-    "@web3auth/metamask-adapter": "^5.1.0",
-    "@web3auth/modal": "^5.1.1",
-    "@web3auth/openlogin-adapter": "^5.1.1",
-    "@web3auth/wallet-connect-v2-adapter": "^5.1.1",
-    "axios": "^1.3.6",
-    "eslint": "^8.38.0",
-    "eslint-config-next": "13.3.0",
+    "@walletconnect/sign-client": "^2.7.8",
+    "@walletconnect/utils": "^2.7.8",
+    "@web3auth/base": "^5.2.0",
+    "@web3auth/ethereum-provider": "^5.2.0",
+    "@web3auth/metamask-adapter": "^5.2.0",
+    "@web3auth/modal": "^5.2.1",
+    "@web3auth/openlogin-adapter": "^5.2.1",
+    "@web3auth/wallet-connect-v2-adapter": "^5.2.0",
+    "axios": "^1.4.0",
     "ethers": "5.7.2",
-    "logrocket": "^4.0.0",
-    "next": "13.3.0",
+    "logrocket": "^4.0.2",
+    "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.4.3",
+    "react-intersection-observer": "^9.4.4",
+    "react-is": "^18.2.0",
     "react-number-format": "^5.1.4",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^3.0.0-beta-1",
     "styled-components": "^5.3.9",
-    "typescript": "5.0.4",
     "uuid": "^9.0.0",
-    "victory": "^36.6.8",
+    "victory": "^36.6.10",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@storybook/addon-a11y": "^7.0.6",
-    "@storybook/addon-actions": "^7.0.6",
-    "@storybook/addon-essentials": "^7.0.6",
-    "@storybook/addon-interactions": "^7.0.6",
-    "@storybook/addon-jest": "^7.0.6",
-    "@storybook/addon-links": "^7.0.6",
-    "@storybook/blocks": "^7.0.6",
+    "@babel/core": "^7.22.1",
+    "@storybook/addon-a11y": "^7.0.18",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-jest": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
     "@storybook/jest": "^0.1.0",
-    "@storybook/nextjs": "^7.0.6",
-    "@storybook/react": "^7.0.6",
+    "@storybook/nextjs": "^7.0.18",
+    "@storybook/react": "^7.0.18",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -82,21 +82,23 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@walletconnect/types": "^2.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@walletconnect/types": "^2.7.8",
     "axe-playwright": "^1.2.3",
     "babel-loader": "^9.1.2",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "concurrently": "^8.0.1",
+    "concurrently": "^8.1.0",
+    "eslint": "^8.42.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "^13.4.4",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-mdx": "^2.0.5",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.11",
-    "eslint-plugin-testing-library": "^5.10.3",
+    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-testing-library": "^5.11.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -105,10 +107,12 @@
     "jest-styled-components": "^7.1.1",
     "msw": "^1.2.1",
     "next-router-mock": "^0.9.3",
-    "playwright": "^1.32.3",
+    "playwright": "^1.34.3",
     "react-test-renderer": "^18.2.0",
-    "storybook": "^7.0.6",
+    "storybook": "^7.0.18",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
     "wait-on": "^7.0.1",
-    "webpack": "^5.80.0"
+    "webpack": "^5.85.1"
   }
 }
