--- a/p2p-service/package.json
+++ b/p2p-service/package.json
@@ -1,19 +1,30 @@
 {
   "dependencies": {
+    "@safe-global/relay-kit": "^1.0.0",
+    "@safe-global/safe-deployments": "^1.23.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ethers": "^6.5.1",
     "express": "^4.18.2",
+    "jose": "^4.14.4",
+    "pixcode": "^1.4.0",
+    "qrcode": "^1.5.3",
     "qrcode-pix": "^5.0.0",
     "sqlite3": "^5.1.6",
     "telegraf": "^4.12.2"
   },
-  "name": "pix-bot",
-  "version": "1.0.0",
+  "name": "p2p-service",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
