--- a/web-app/package.json
+++ b/web-app/package.json
@@ -36,18 +36,19 @@
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/sign-client": "^2.7.8",
     "@walletconnect/utils": "^2.7.8",
-    "@web3auth/base": "^5.2.0",
-    "@web3auth/ethereum-provider": "^5.2.0",
-    "@web3auth/metamask-adapter": "^5.2.0",
-    "@web3auth/modal": "^5.2.1",
-    "@web3auth/openlogin-adapter": "^5.2.1",
-    "@web3auth/wallet-connect-v2-adapter": "^5.2.0",
+    "@web3auth/base": "^6.1.1",
+    "@web3auth/ethereum-provider": "^6.1.1",
+    "@web3auth/metamask-adapter": "^6.1.1",
+    "@web3auth/modal": "^6.1.1",
+    "@web3auth/openlogin-adapter": "^6.1.1",
+    "@web3auth/wallet-connect-v2-adapter": "^6.1.1",
     "axios": "^1.4.0",
     "ethers": "5.7.2",
     "logrocket": "^4.0.2",
     "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "notistack": "^3.0.1",
+    "pixcode": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.4",
@@ -98,6 +99,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-testing-library": "^5.11.0",
+    "html5-qrcode": "^2.3.8",
     "http-server": "^14.1.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
